key press detection added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     Designed by webworms🕸️🐛.
   </footer>
   <script src="index.js" charset="utf-8"></script>
+  <script language="JavaScript" type="text/javascript" src="/js/jquery-1.2.6.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="/js/jquery-ui-personalized-1.5.2.packed.js"></script>
+<script language="JavaScript" type="text/javascript" src="/js/sprinkle.js"></script>
 </body>
 
 </html>
